fix: removed hidden visibility for context menus

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -3,7 +3,6 @@ div {
 }
 
 .context-menu {
-    visibility: hidden;
     position: absolute;
     background: lightcoral
 }
